# ferrocache

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: command.rs  lib.rs  main.rs  server.rs  storage.rs
src/persistence/: aof.rs  mod.rs
src/protocol/: encoder.rs  frame.rs  mod.rs  parser.rs
